--- a/src/views/partials/uploadFileModal.ejs
+++ b/src/views/partials/uploadFileModal.ejs
@@ -36,7 +36,7 @@
             <!-- Modal footer -->
             <div class="flex justify-end items-center p-4 md:p-5 border-t rounded-b border-gray-600">
                 <button data-modal-hide="upload-modal" type="button" class="py-2.5 px-5 text-sm font-medium rounded-lg border bg-gray-800 text-gray-300 border-gray-600 hover:text-white hover:bg-gray-700">Cancel</button>
-                <button id="submit" type="submit" form="uploadFile" disabled data-modal-hide="upload-modal" class="ms-3 text-white font-medium rounded-lg text-sm px-5 py-2.5 text-center disabled:opacity-35 bg-blue-600 enabled:hover:bg-blue-700">Upload</button>
+                <button id="submit-files" type="submit" form="uploadFile" disabled data-modal-hide="upload-modal" class="ms-3 text-white font-medium rounded-lg text-sm px-5 py-2.5 text-center disabled:opacity-35 bg-blue-600 enabled:hover:bg-blue-700">Upload</button>
             </div>
         </div>
     </div>
