--- a/src/views/partials/main.ejs
+++ b/src/views/partials/main.ejs
@@ -1,7 +1,7 @@
 <section class="bg-gray-900 flex flex-grow justify-around">
     <div class="flex flex-col gap-5 py-8 px-8 md:px-16 lg:px-32 w-full">
         <div>
-            <div class="flex items-end justify-between py-4">
+            <div class="flex relative items-end justify-between py-4">
                 <%- include("./breadCrumbs.ejs")%>
                 <%- include("./tableHeader.ejs")%>
             </div>
