add folder share modal ui

--- a/src/views/partials/main.ejs
+++ b/src/views/partials/main.ejs
@@ -14,3 +14,4 @@
 <%- include("./updateItemModal.ejs")%>
 <%- include("./deleteItemModal.ejs")%>
 <%- include("./toastContainer.ejs")%>
+<%- include("./shareFolderModal.ejs")%>
