--- a/src/views/partials/table.ejs
+++ b/src/views/partials/table.ejs
@@ -6,6 +6,7 @@
                 <thead class="text-xs uppercase bg-gray-700 text-gray-400">
                     <tr>
                         <th scope="col" class="px-6 py-3 w-1/2">Name</th>
+                        <th scope="col" class="px-6 py-3">Shared</th>
                         <th scope="col" class="px-6 py-3">Last modified</th>
                         <th scope="col" class="px-6 py-3">File size</th>
                         <th scope="col" class="px-6 py-3">
@@ -17,22 +18,29 @@
                     <% for (const item of content) { %>
                         <tr class="border-b bg-gray-800 border-gray-700 hover:bg-gray-600" id="<%= item.id %>">
                             <% if (item.type == "folder") { %>
-                                <th scope="row">
+                                <td scope="row">
                                     <a href="/my-drive/<%= item.id ? item.id : null %>" class="flex items-center gap-4 px-6 py-4 font-medium whitespace-nowrap text-white">
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
                                             <path d="M19.5 21a3 3 0 0 0 3-3v-4.5a3 3 0 0 0-3-3h-15a3 3 0 0 0-3 3V18a3 3 0 0 0 3 3h15ZM1.5 10.146V6a3 3 0 0 1 3-3h5.379a2.25 2.25 0 0 1 1.59.659l2.122 2.121c.14.141.331.22.53.22H19.5a3 3 0 0 1 3 3v1.146A4.483 4.483 0 0 0 19.5 9h-15a4.483 4.483 0 0 0-3 1.146Z" />
                                         </svg>
                                         <%= item.name %>
                                     </a>
-                                </th>
+                                </td>
                             <% } else { %>
-                                <th scope="row" class="flex items-center gap-4 px-6 py-4 font-medium whitespace-nowrap text-white">
+                                <td scope="row" class="flex items-center gap-4 px-6 py-4 font-medium whitespace-nowrap text-white">
                                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
                                         <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m2.25 0H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
                                     </svg>
                                     <%= item.name %>
-                                </th>
+                                </td>
                             <% } %>
+                            <td class="px-6 py-4">
+                                <% if (item.type == "file" && shareLink || item.shareId) { %>
+                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="ml-4 size-4 text-blue-400">
+                                        <path fill-rule="evenodd" d="M12 20a7.966 7.966 0 0 1-5.002-1.756l.002.001v-.683c0-1.794 1.492-3.25 3.333-3.25h3.334c1.84 0 3.333 1.456 3.333 3.25v.683A7.966 7.966 0 0 1 12 20ZM2 12C2 6.477 6.477 2 12 2s10 4.477 10 10c0 5.5-4.44 9.963-9.932 10h-.138C6.438 21.962 2 17.5 2 12Zm10-5c-1.84 0-3.333 1.455-3.333 3.25S10.159 13.5 12 13.5c1.84 0 3.333-1.455 3.333-3.25S13.841 7 12 7Z" clip-rule="evenodd"/>
+                                    </svg>
+                                <% } %>
+                            </td>
                             <td class="px-6 py-4"><%= item.updatedAt %></td>
                             <td class="px-6 py-4"><%= item.size ? item.size : null %></td>
                             <td class="px-6 py-4">
@@ -84,8 +92,14 @@
                                     </svg>
                                     <div>
                                         <div class="font-medium"><%= item.name %></div>
-                                        <div class="text-xs text-gray-400">
+                                        <div class="text-xs text-gray-400 flex justify-center items-center">
                                             <%= item.updatedAt %> • <%= item.size ? item.size : 'Unknown size' %>
+                                            <% if (item.type == "file" && shareLink || item.shareId) { %>
+                                                •
+                                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="ml-1 size-3 text-blue-400">
+                                                    <path fill-rule="evenodd" d="M12 20a7.966 7.966 0 0 1-5.002-1.756l.002.001v-.683c0-1.794 1.492-3.25 3.333-3.25h3.334c1.84 0 3.333 1.456 3.333 3.25v.683A7.966 7.966 0 0 1 12 20ZM2 12C2 6.477 6.477 2 12 2s10 4.477 10 10c0 5.5-4.44 9.963-9.932 10h-.138C6.438 21.962 2 17.5 2 12Zm10-5c-1.84 0-3.333 1.455-3.333 3.25S10.159 13.5 12 13.5c1.84 0 3.333-1.455 3.333-3.25S13.841 7 12 7Z" clip-rule="evenodd"/>
+                                                </svg>
+                                            <% } %>
                                         </div>
                                     </div>
                                 </div>
