--- a/src/views/partials/tableHeader.ejs
+++ b/src/views/partials/tableHeader.ejs
@@ -1,19 +1,19 @@
 <!-- Desktop -->
-<div class="hidden xl:flex items-center justify-end gap-2">
-    <button data-modal-target="share-modal" data-modal-toggle="share-modal" data-toggle="upload-modal" class="flex items-center justify-center px-4 py-2 text-sm font-medium border rounded-lg w-auto focus:outline-none bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700" type="button">
-        <svg class="w-4 h-4 mr-2 text-gray-400 icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
+<div class="hidden xl:flex items-center justify-end gap-2 z-0">
+    <button data-modal-target="share-modal" data-modal-toggle="share-modal" data-toggle="upload-modal" class="flex items-center justify-center px-4 py-2 text-sm font-medium border rounded-lg w-auto focus:outline-none bg-blue-600 text-white border-blue-500 hover:bg-blue-700" type="button">
+        <svg class="w-4 h-4 mr-2 text-white icon" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
             <path d="M17.5 3a3.5 3.5 0 0 0-3.456 4.06L8.143 9.704a3.5 3.5 0 1 0-.01 4.6l5.91 2.65a3.5 3.5 0 1 0 .863-1.805l-5.94-2.662a3.53 3.53 0 0 0 .002-.961l5.948-2.667A3.5 3.5 0 1 0 17.5 3Z"/>
         </svg>
         Share Folder
     </button>
-    <button data-modal-target="upload-modal" data-modal-toggle="upload-modal" data-toggle="upload-modal" class="flex items-center justify-center px-4 py-2 text-sm font-medium border rounded-lg w-auto focus:outline-none bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700" type="button">
-        <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="w-4 h-4 mr-2 text-gray-400 icon" viewbox="0 0 20 20" fill="currentColor">
+    <button data-modal-target="upload-modal" data-modal-toggle="upload-modal" data-toggle="upload-modal" class="flex items-center justify-center px-4 py-2 text-sm font-medium border rounded-lg w-auto focus:outline-none bg-blue-600 text-white border-blue-500 hover:bg-blue-700" type="button">
+        <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="w-4 h-4 mr-2 text-white icon" viewbox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M12 3a1 1 0 0 1 .78.375l4 5a1 1 0 1 1-1.56 1.25L13 6.85V14a1 1 0 1 1-2 0V6.85L8.78 9.626a1 1 0 1 1-1.56-1.25l4-5A1 1 0 0 1 12 3ZM9 14v-1H5a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-4a2 2 0 0 0-2-2h-4v1a3 3 0 1 1-6 0Zm8 2a1 1 0 1 0 0 2h.01a1 1 0 1 0 0-2H17Z" clip-rule="evenodd"/>
         </svg>
         Upload File
     </button>
-    <button data-modal-target="new-folder" data-modal-toggle="new-folder" class="flex items-center justify-center px-4 py-2 text-sm font-medium border rounded-lg w-auto focus:outline-none bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700" type="button">
-        <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="w-4 h-4 mr-2 text-gray-400" viewbox="0 0 20 20" fill="currentColor">
+    <button data-modal-target="new-folder" data-modal-toggle="new-folder" class="flex items-center justify-center px-4 py-2 text-sm font-medium border rounded-lg w-auto focus:outline-none bg-blue-600 text-white border-blue-500 hover:bg-blue-700" type="button">
+        <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" class="w-4 h-4 mr-2 text-white" viewbox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M5 4a2 2 0 0 0-2 2v1h10.968l-1.9-2.28A2 2 0 0 0 10.532 4H5ZM3 19V9h18v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2Zm9-8.5a1 1 0 0 1 1 1V13h1.5a1 1 0 1 1 0 2H13v1.5a1 1 0 1 1-2 0V15H9.5a1 1 0 1 1 0-2H11v-1.5a1 1 0 0 1 1-1Z" clip-rule="evenodd"/>
         </svg>          
         New Folder
