--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head class="overflow-hidden">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GuudeDrive</title>
@@ -8,7 +8,7 @@
     <script src="/javascript/flowbite.min.js"></script>
     <script defer type="module" src="/javascript/main.js"></script>
 </head>
-    <body class="flex flex-col h-full min-h-screen">
+    <body class="flex flex-col h-screen overflow-hidden">
         <%- include("./layout/header.ejs") %>
         <%- body %>
     </body>
