--- a/src/views/partials/shareFolderModal.ejs
+++ b/src/views/partials/shareFolderModal.ejs
@@ -1,4 +1,4 @@
-<div id="share-modal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+<div id="share-modal" tabindex="-1" aria-hidden="true" class="<%= openShareModal ? '' : 'hidden' %> overflow-y-auto overflow-x-hidden fixed inset-0 z-50 flex justify-center items-center bg-black bg-opacity-20">
     <div class="relative p-4 w-full max-w-2xl max-h-full">
         <!-- Modal content -->
         <div class="relative rounded-lg shadow-sm bg-gray-700">
@@ -31,7 +31,7 @@
                         </div>
                         <div class="mb-5">
                             <div class="flex items-center mb-4">
-                                <input id="cascade" name="cascade" type="checkbox" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm dark:bg-gray-700 dark:border-gray-600">
+                                <input id="cascade" name="cascade" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded-sm dark:bg-gray-700 dark:border-gray-600">
                                 <label for="cascade" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Include Subfolders</label>
                             </div>
                         </div>
@@ -45,7 +45,7 @@
                         <div class="flex items-center">
                             <span class="shrink-0 z-10 inline-flex items-center py-2.5 px-4 text-sm font-medium text-center text-gray-900 bg-gray-100 border border-gray-300 rounded-s-lg dark:bg-gray-600 dark:text-white dark:border-gray-600">URL</span>
                             <div class="relative w-full">
-                                <input id="website-url" type="text" class="bg-gray-50 border border-e-0 border-gray-300 text-white  text-sm border-s-0 focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500" value="https://flowbite.comhttps://flowbite.comhttps://flowbite.comhttps://flowbite.com" readonly />
+                                <input id="website-url" type="text" class="bg-gray-50 border border-e-0 border-gray-300 text-white  text-sm border-s-0 focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:focus:ring-blue-500 dark:focus:border-blue-500" value="<%= shareLink %>" readonly />
                             </div>
                             <button data-copy-to-clipboard-target="website-url" class="shrink-0 z-10 inline-flex items-center py-3 px-4 text-sm font-medium text-center text-white bg-blue-700 rounded-e-lg hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800 border border-blue-700 dark:border-blue-600 hover:border-blue-800 dark:hover:border-blue-700" type="button">
                                 <span id="default-icon">
@@ -66,7 +66,12 @@
             <!-- Modal footer -->
             <div class="flex justify-end items-center p-4 md:p-5 border-t rounded-b border-gray-600">
                 <button data-modal-hide="share-modal" type="button" class="py-2.5 px-5 text-sm font-medium rounded-lg border bg-gray-800 text-gray-300 border-gray-600 hover:text-white hover:bg-gray-700">Cancel</button>
-                <button id="submit-files" type="submit" form="share-folder-form" data-modal-hide="share-modal" class="ms-3 text-white font-medium rounded-lg text-sm px-5 py-2.5 text-center disabled:opacity-35 bg-blue-600 enabled:hover:bg-blue-700">Get link</button>
+                <% if (shareLink == "") { %>
+                    <button id="submit-files" type="submit" form="share-folder-form" data-modal-hide="share-modal" class="disabled ms-3 text-white font-medium rounded-lg text-sm px-5 py-2.5 text-center disabled:opacity-35 bg-blue-600 enabled:hover:bg-blue-700">Get link</button>
+                    <% } else { %>
+                    <button disabled id="submit-files" type="submit" form="share-folder-form" data-modal-hide="share-modal" class="disabled ms-3 text-white font-medium rounded-lg text-sm px-5 py-2.5 text-center disabled:opacity-35 bg-blue-600 enabled:hover:bg-blue-700">Get link</button>
+                <% } %>
+
             </div>
         </div>
     </div>
