--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -885,6 +885,18 @@ video {
   max-height: 100%;
 }
 
+.max-h-\[calc\(100vh-4rem\)\] {
+  max-height: calc(100vh - 4rem);
+}
+
+.max-h-\[calc\(100vh-3\.5rem\)\] {
+  max-height: calc(100vh - 3.5rem);
+}
+
+.max-h-\[calc\(100vh-3rem\)\] {
+  max-height: calc(100vh - 3rem);
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -942,6 +954,26 @@ video {
   width: max-content;
 }
 
+.min-w-12 {
+  min-width: 3rem;
+}
+
+.min-w-14 {
+  min-width: 3.5rem;
+}
+
+.min-w-20 {
+  min-width: 5rem;
+}
+
+.min-w-36 {
+  min-width: 9rem;
+}
+
+.min-w-32 {
+  min-width: 8rem;
+}
+
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -968,6 +1000,10 @@ video {
 
 .flex-shrink {
   flex-shrink: 1;
+}
+
+.flex-shrink-0 {
+  flex-shrink: 0;
 }
 
 .shrink-0 {
