implement download for shared drive

--- a/src/views/partials/shared/tableShared.ejs
+++ b/src/views/partials/shared/tableShared.ejs
@@ -32,7 +32,7 @@
                         <% } %>
                         <div class="px-5 py-4"><%= item.size ? item.size : null %></div>
                         <div class="px-6 py-4 min-w-32 flex justify-center">
-                            <form action="/download/<%= item.id %>" method="get">
+                            <form action="/download-shared/<%= folderId %>/<%= item.id %>?key=<%= key %>" method="get">
                                     <button
                                         type="submit" 
                                         onclick="setToast('Download Started!')"
@@ -81,18 +81,17 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <form action="/download/<%= item.id %>" method="get">
+                                    <form action="/download-shared/<%= folderId %>/<%= item.id %>" method="get">
                                         <button
                                             type="submit" 
                                             onclick="setToast('Download Started!')"
-                                            data-popover-target="dropdown-<%= item.id %>" 
-                                            class="text-white text-center inline-flex items-center" 
-                                            type="button">
+                                            class="text-white text-center inline-flex items-center">
                                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 cursor-pointer">
                                                 <path stroke-linecap="round" stroke-linejoin="round" d="M3 16.5v2.25A2.25 2.25 0 0 0 5.25 21h13.5A2.25 2.25 0 0 0 21 18.75V16.5M16.5 12 12 16.5m0 0L7.5 12m4.5 4.5V3" />
                                             </svg>
                                         </button>
-                                </form>
+                                        <input hidden name="key" type="text" value="<%= key %>">
+                                    </form>     
                                 <% } %>
                             </div>
                         </li>
