add toast to shared drive

--- a/src/views/layoutAuth.ejs
+++ b/src/views/layoutAuth.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GuudeDrive</title>
     <link rel="stylesheet" href="/styles/output.css">
+    <script defer type="module" src="/javascript/mainShared.js"></script>
 </head>
     <body class="flex flex-col h-full min-h-screen">
         <%- include("./layout/headerAuth.ejs") %>
